--- a/App/.env
+++ b/App/.env
@@ -7,3 +7,11 @@ DB_USER=root
 DB_PASS=PASSWORD515
 DATABASE_URL=mysql://root:PASSWORD515@smartcell:3306/smartcellardb
 REDIS_URL=redis://redis:6379
+
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
