--- a/App/config/services.yaml
+++ b/App/config/services.yaml
@@ -16,10 +16,13 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\Services\ApiService:
+    App\Services\BarcodeScanService:
         arguments:
-            $apiKey: '%api_key%'
-            $apiKeyLookup: '%api_key_lookup%'
+            $apiKey: '%env(API_KEY)%'
+
+    App\Services\ProductLookupService:
+        arguments:
+            $apiKeyLookup: '%env(API_KEY_LOOKUP)%'
     App\:
         resource: '../src/'
         exclude:
