--- a/App/composer.json
+++ b/App/composer.json
@@ -34,6 +34,7 @@
         "symfony/security-bundle": "7.1.*",
         "symfony/serializer": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
+        "symfony/ux-turbo": "^2.19",
         "symfony/validator": "7.1.*",
         "symfony/yaml": "7.1.*"
     },
