:feature:starting to be able to extract /reduce the number of the inserted products

--- a/App/config/packages/messenger.yaml
+++ b/App/config/packages/messenger.yaml
@@ -11,7 +11,9 @@ framework:
 
         routing:
             # Route your messages to the transports
-             'App\Message\UploadPhotoMessage': async
+             'App\Message\PhotoInsertMessage': async
+             'App\Message\BarcodeExtractMessage': async
+             'App\Message\BarcodeInsertMessage': async
 
 # when@test:
 #    framework:
