--- a/App/config/services.yaml
+++ b/App/config/services.yaml
@@ -16,11 +16,11 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\Services\BarcodeScanService:
+    App\Services\ApiBarcodeScanService:
         arguments:
             $apiKey: '%env(API_KEY)%'
 
-    App\Services\ProductLookupService:
+    App\Services\ApiProductLookupService:
         arguments:
             $apiKeyLookup: '%env(API_KEY_LOOKUP)%'
     App\:
