--- a/App/.gitignore
+++ b/App/.gitignore
@@ -21,3 +21,7 @@
 ###> symfony/phpunit-bridge ###
 
 ###< symfony/phpunit-bridge ###
+
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
