--- a/App/composer.json
+++ b/App/composer.json
@@ -88,7 +88,9 @@
         }
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.61",
+        "friendsofphp/php-cs-fixer": "^3.62",
+        "phpmd/phpmd": "^2.15",
+        "phpstan/phpstan": "^1.11",
         "phpunit/phpunit": "^11.3",
         "symfony/maker-bundle": "^1.60",
         "symfony/phpunit-bridge": "^7.1",
